# deltaphine

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/registration/: logged_out.html  login.html  profile.html
deltaphine/: asgi.py  settings.py  urls.py
templates/: base.html
templates/registration/: logged_out.html  login.html
