# Project configuration with Poetry as a build system.
# See https://python-poetry.org/docs/pyproject/

[tool.poetry]
name = "deltaphine"
version = "0.0.0"
description = "Experimental Django app."
authors = [
    "Serhii Mashentsev <d.ashesss@gmail.com>",
]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.0"
psycopg = "*"
psycopg-binary = "*"

[tool.poetry.scripts]
try-skimmer = "skimmer.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
